--- a/raw01.html
+++ b/raw01.html
@@ -29,7 +29,7 @@
 			<h2>Login form </h2>
 		 	Username :<input name = "username" type = "text" size = "20"><br><br>
 		 	Password :<input name = "password" type = "password" size = "20"><br><br>
-			<input type = "submit" name = "login" value = "login" ><br><br>
+			<input type = "submit" id = "login" value = "login" ><br><br>
 			<a href="https://www.psgtech.com"><u>Forgotten password</u></a><br><br>
 			<a href="https://www.psgtech.com"><u>Register Now !</u></a><br><br>
 		</form>
