--- a/raw01.html
+++ b/raw01.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<button onclick = "raw01.html">Home</button>
-		<div class = "logo"> Easy search job </div>
+		<div id = "logo"> Easy search job </div>
 
 		<div class="nav">
 			<a href="">About Us</a>
@@ -23,15 +23,15 @@
 			<a href="">Contacts</a>
 		</div>
 		<br>
-		<div class = "img">Find the right <br><b>JOB</b> for <b>YOU</b></div>
+		<div id = "img">Find the right <br><b>JOB</b> for <b>YOU</b></div>
 
-		<form method = "POST" action = "comments.php" class = "form_login">
+		<form method = "POST" action = "comments.php" id = "form_login">
 			<h2>Login form </h2>
 		 	Username :<input name = "username" type = "text" size = "20"><br><br>
 		 	Password :<input name = "password" type = "password" size = "20"><br><br>
-			<input type = "submit" id = "login" value = "login" ><br><br>
-			<a href="https://www.psgtech.com"><u>Forgotten password</u></a><br><br>
-			<a href="https://www.psgtech.com"><u>Register Now !</u></a><br><br>
+			<input type = "submit" id = "login" value = "Login" ><br><br>
+			<a href=""><u>Forgotten password</u></a><br><br>
+			<a href=""><u>Register Now !</u></a><br><br>
 		</form>
 
 	</body>
