--- a/raw01.html
+++ b/raw01.html
@@ -14,7 +14,7 @@
 		<button onclick = "raw01.html">Home</button>
 		<div id = "logo"> Easy search job </div>
 
-		<div class="nav">
+		<div id = "nav">
 			<a href="">About Us</a>
 			<a href="">View Resume</a>
 			<a href="">View Job Listing</a>
@@ -33,6 +33,11 @@
 			<a href=""><u>Forgotten password</u></a><br><br>
 			<a href=""><u>Register Now !</u></a><br><br>
 		</form>
+		<hr>
+		<footer>
+ 			<p>Hosted by: NASHA Technologies</p>
+ 			<p>Contact information: <a href="mailto:ashfaaqomg@gmail.com">ashfaaq24@gmail.com</a>.</p>
+		</footer>
 
 	</body>
 </html>
