--- a/raw01.html
+++ b/raw01.html
@@ -4,6 +4,7 @@
 		<link rel = "stylesheet" href = "bgimg.css">
 		<link rel = "stylesheet" href = "logo.css">
 		<link rel = "stylesheet" href = "form_login.css">
+		<link rel = "stylesheet" href = "side_menu.css">
 		<style type="text/css">a {text-decoration: none}
 		</style>
 		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
@@ -33,6 +34,15 @@
 			<a href=""><u>Forgotten password</u></a><br><br>
 			<a href=""><u>Register Now !</u></a><br><br>
 		</form>
+		<div id = "vertical_menu">
+			<a href = "" class = "vertical_menu_head">Browse for jobs</a>
+			<a href = "">-----Job1-----</a>
+			<a href = "">-----Job2-----</a>
+			<a href = "">-----Job1-----</a>
+			<a href = "">-----Job2-----</a>
+			<a href = "">-----Job1-----</a>
+			<a href = "">-----Job2-----</a>
+		</div>
 		<hr>
 		<footer>
  			<p>Hosted by: NASHA Technologies</p>
