--- a/raw01.html
+++ b/raw01.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<button onclick = "raw01.html">Home</button>
-		<div id = "logo"> Easy search job </div>
+		<div id = "logo"> Easy search job</div>
 
 		<div id = "nav">
 			<a href="">About Us</a>
@@ -27,12 +27,14 @@
 		<div id = "img">Find the right <br><b>JOB</b> for <b>YOU</b></div>
 
 		<form method = "POST" action = "comments.php" id = "form_login">
-			<h2>Login form </h2>
-		 	Username :<input name = "username" type = "text" size = "20"><br><br>
-		 	Password :<input name = "password" type = "password" size = "20"><br><br>
+			<h2 id = "login_head01">Login form </h2>
+		 	<div id = "user_pass">
+				Username :<input name = "username" type = "text" size = "30"><br><br>
+		 		Password :<input name = "password" type = "password" size = "30"><br><br>
+			</div>
 			<input type = "submit" id = "login" value = "Login" ><br><br>
-			<a href=""><u>Forgotten password</u></a><br><br>
-			<a href=""><u>Register Now !</u></a><br><br>
+			<a href="" style = "color: #66cc00;"><u>Forgotten password</u></a><br><br>
+			<a href="" style = "color: #66cc00;"><u>Register Now !</u></a><br><br>
 		</form>
 		<div id = "vertical_menu">
 			<a href = "" class = "vertical_menu_head">Browse for jobs</a>
