Change in img and side menu sorted

--- a/raw01.html
+++ b/raw01.html
@@ -24,7 +24,17 @@
 			<a href="">Contacts</a>
 		</div>
 		<br>
-		<div id = "img">Find the right <br><b>JOB</b> for <b>YOU</b></div>
+		<div id = "img">
+			<br>
+			<div style = "color: #006666; font-family: Arial, sans-serif; font-size: 70px">
+				Find the right <br>JOB for YOU
+			</div><br>
+			<div style = "color: #cc0066; font-family: Verdana, sans-serif; font-size: 25px;">
+				Choose a job you LOVE, and you will NEVER <br>have to WORK a DAY in your LIFE !
+			</div>
+		</div>
+
+		<br>
 
 		<form method = "POST" action = "comments.php" id = "form_login">
 			<h2 id = "login_head01">Login form </h2>
@@ -37,18 +47,21 @@
 			<a href="" style = "color: #66cc00;"><u>Register Now !</u></a><br><br>
 		</form>
 		<div id = "vertical_menu">
-			<a href = "" class = "vertical_menu_head">Browse for jobs</a>
-			<a href = "">-----Job1-----</a>
-			<a href = "">-----Job2-----</a>
-			<a href = "">-----Job1-----</a>
-			<a href = "">-----Job2-----</a>
-			<a href = "">-----Job1-----</a>
-			<a href = "">-----Job2-----</a>
+			<a href = "" class = "vertical_menu_head">Browse jobs</a>
+			<div id = "vertical_menu_list" style = "color: #cc0066">
+				<a href = "">* Accounting </a>
+				<a href = "">* Administration </a>
+				<a href = "">* Advert Media</a>
+				<a href = "">* Construction</a>
+				<a href = "">* Education</a>
+				<a href = "">* Software</a>
+				<a href = "">* More...</a>
+			</div>
 		</div>
 		<hr>
 		<footer>
- 			<p>Hosted by: NASHA Technologies</p>
- 			<p>Contact information: <a href="mailto:ashfaaqomg@gmail.com">ashfaaq24@gmail.com</a>.</p>
+ 			<p>All rights reserved &copy 2018 Nasha Technologies</p>
+ 			<p>Contact information: <a href="mailto:ashfaaqomg@gmail.com">mailtonashatech@gmail.com</a>.</p>
 		</footer>
 
 	</body>
