Added php, signup

--- a/raw01.html
+++ b/raw01.html
@@ -19,7 +19,7 @@
 
 		<div id = "nav">
 			<a href="about_us.html">About Us</a>
-			<a href="">View Resume</a>
+			<a href="resume.html">View Resume</a>
 			<a href="">View Job Listing</a>
 			<a href="">Submit Your Resume</a>
 			<a href="">Submit a job ad</a>
@@ -41,8 +41,8 @@
 		<form method = "POST" action = "login_form.php" id = "form_login">
 			<h2 id = "login_head01">Login form </h2>
 		 	<div id = "user_pass">
-				Username :<input name = "username" type = "text" size = "30"><br><br>
-		 		Password :<input name = "password" type = "password" size = "30"><br><br>
+				Username :<input name = "usern" type = "text" size = "30"><br><br>
+		 		Password :<input name = "psw" type = "password" size = "30"><br><br>
 			</div>
 			<input type = "submit" id = "login" value = "Login" ><br><br>
 			<a href="" style = "color: #66cc00;"><u>Forgotten password</u></a><br><br>
