--- a/signup.html
+++ b/signup.html
@@ -114,50 +114,49 @@ hr {
 
 <div class="modal">
     <span onclick = "location = 'raw01.html'" class = "close" title = "Close Modal">&times;</span>
-    <form class="modal-content" action="/action_page.php">
-    <div class="container">
-      <h2>Sign Up</h2> &nbsp &nbsp &nbsp &nbsp
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-	  <label for="fname"><b>First Name</b></label>
-      <input type="text" placeholder="Enter First Name" name="fname" required>
+    <form class = "modal-content" method = "POST" action = "sign_up.php">
+    <div class = "container">
+        <h2>Sign Up</h2> &nbsp; &nbsp; &nbsp; &nbsp;
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+	    <label for = "fname"><b>First Name</b></label>
+        <input type = "text" placeholder = "Enter First Name" name = "fname" required>
 
-	  <label for="lname"><b>Last Name</b></label>
-      <input type="text" placeholder="Enter Last Name" name="lname" required>
+        <label for = "lname"><b>Last Name</b></label>
+        <input type = "text" placeholder = "Enter Last Name" name = "lname" required>
 
+        <label for = "mobno"><b>Mobile Number</b></label>
+        <input type = "text" placeholder = "Enter Number" name = "mobno" required>
 
-	  <label for="email"><b>Mobile Number</b></label>
-      <input type="text" placeholder="Enter Number" name="num" required>
+        <label for = "country"><b>Country</b></label>
+        <input type = "text" placeholder = "Enter Country" name = "country" required>
 
-	  <label for="email"><b>Country</b></label>
-	  <input type="text" placeholder="Enter Country" name="country" required>
+        <label for = "email"><b>Email</b></label>
+        <input type = "text" placeholder="Enter Email" name = "email" required>
 
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        <label for="keyskills"><b>Key Skills</b></label>
+        <select>
+            <option label="Coding">Coding</option>
+		    <option label="WebDesign">Web Design</option>
+	    </select>
 
-	  <label for="psw-repeat"><b>Key Skills</b></label>
-      <select>
-		<option label="Coding">Coding</option>
-		<option label="WebDesign">Web Design</option>
-	</select>
+        <label>
+            <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label>
 
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-      <div class="clearfix">
-          <button type="submit" class="signupbtn">Sign Up</button>
-      </div>
+        <div class="clearfix">
+            <button type="submit" class="signupbtn">Sign Up</button>
+        </div>
     </div>
-  </form>
+    </form>
 </div>
 
 <script>
