--- a/raw01.html
+++ b/raw01.html
@@ -19,11 +19,11 @@
 
 		<div id = "nav">
 			<a href="about_us.html">About Us</a>
-			<a href="resume.html">View Resume</a>
+			<a href="resume.php">View Resume</a>
 			<a href="">View Job Listing</a>
 			<a href="">Submit Your Resume</a>
 			<a href="">Submit a job ad</a>
-			<a href="">Contacts</a>
+			<a href="contact.html">Contacts</a>
 		</div>
 		<br>
 		<div id = "img">
@@ -45,7 +45,7 @@
 		 		Password :<input name = "psw" type = "password" size = "30"><br><br>
 			</div>
 			<input type = "submit" id = "login" value = "Login" ><br><br>
-			<a href="" style = "color: #66cc00;"><u>Forgotten password</u></a><br><br>
+			<a href="forgot.php" style = "color: #66cc00;"><u>Forgotten password</u></a><br><br>
 			<a href="signup.html" style = "color: #66cc00;"><u>Register Now !</u></a><br><br>
 		</form>
 		<form method = "post" action = "find_a_job.php" id = "find_a_job">
@@ -75,6 +75,7 @@
 							<option value = "2">Textile</option>
 							<option value = "3">Automobile</option>
 							<option value = "4">Medicine</option>
+							<option value = "5">Account</option>
 						</select>
 			&emsp;&emsp;
 			Keyword :<input type = "text" size="20" name = "Keyword">
@@ -86,6 +87,7 @@
 						<option value = "2">Chennai</option>
 						<option value = "3">Delhi</option>
 						<option value = "4">Calicut</option>
+						<option value = "5">Mumbai</option>
 					</select>
 				&emsp;&emsp; &emsp;
 				<input type = "submit" id = "search" value = "SEARCH" >
