Folders made, following changes also done

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<link rel = "stylesheet" href = "navigation_bar.css">
-		<link rel = "stylesheet" href = "bgimg.css">
-		<link rel = "stylesheet" href = "logo.css">
-		<link rel = "stylesheet" href = "form_login.css">
-		<link rel = "stylesheet" href = "side_menu.css">
-		<link rel = "stylesheet" href = "cont.css">
+		<link rel = "stylesheet" href = "../css/navigation_bar.css">
+		<link rel = "stylesheet" href = "../css/bgimg.css">
+		<link rel = "stylesheet" href = "../css/logo.css">
+		<link rel = "stylesheet" href = "../css/form_login.css">
+		<link rel = "stylesheet" href = "../css/side_menu.css">
+		<link rel = "stylesheet" href = "../css/cont.css">
 		<style type="text/css">
 			a {text-decoration: none}
 
@@ -39,16 +39,16 @@
 	</head>
 
 	<body>
-		<form method = "get" action = "raw01.html">
+		<form method = "get" action = "../raw01.html">
 			<button type = "submit">Home</button>
 		</form>
 		<div id = "logo"> Easy search job</div>
 
 		<div id = "nav">
 			<a href="about_us.html">About Us</a>
-			<a href="resume.php">View Resume</a>
+			<a href="../PHP/resume.php">View Resume</a>
 			<a href="">View Job Listing</a>
-			<a href="">Submit Your Resume</a>
+			<a href="submit_resume.html">Submit Your Resume</a>
 			<a href="">Submit a job ad</a>
 			<a href="contact.html">Contacts</a>
 		</div>
@@ -57,7 +57,7 @@
 			<h1 align = "center"><font color = "blue"> "NASHA" technologies</font></h1><br>
 			<div id = "na">
 				<h2><u>CEO</u></h2>
-				<img src = "con1.png" style = "width:250px;height:400px;">
+				<img src = "../pic/con1.png" style = "width:250px;height:400px;">
 				<h3 id = "nar" style = "float:right;">Name              : SR narayanaa
 					<br>Field of interest : Software Systems
 					<br><br><font color = "blue">"Hakuna Matata"</font>
@@ -66,7 +66,7 @@
 
 			<div id = "as">
 				<h2 style = "float:right;"><u>CTO</u></h2><br><br><br><br>
-				<img src = "con2.jpg" style = "width:250px; height:300px; float:right;"><br><br><br><br>
+				<img src = "../pic/con2.jpg" style = "width:250px; height:300px; float:right;"><br><br><br><br>
 				<h3 id = "ash">Name              : Ashfaaq IIM
 					<br>Field of interest : Software Systems
 					<br><br><font color = "blue">"Manners MAKETH Man!"</font>
@@ -75,7 +75,7 @@
 			<br><br><br><br><br><br><br><br>
 			<div id = "ha">
 				<h2><u>An Employee</u></h2>
-				<img src = "con3.png" style = "width:250px;height:350px;">
+				<img src = "../pic/con3.png" style = "width:250px;height:350px;">
 				<h3 id = "har" style = "float: right;">Name              : V.Harish Kumar
 					<br>Field of interest : Software Systems
 					<br><br><font color = "blue">"If it dosen't challenge you,It won't change you"</font>
