--- a/pages/signup.html
+++ b/pages/signup.html
@@ -113,8 +113,8 @@ hr {
 
 
 <div class="modal">
-    <span onclick = "location = 'raw01.html'" class = "close" title = "Close Modal">&times;</span>
-    <form class = "modal-content" method = "POST" action = "sign_up.php">
+    <span onclick = "location = '../raw01.html'" class = "close" title = "Close Modal">&times;</span>
+    <form class = "modal-content" method = "POST" action = "../PHP/sign_up.php">
     <div class = "container">
         <h2>Sign Up</h2> &nbsp; &nbsp; &nbsp; &nbsp;
         <p>Please fill in this form to create an account.</p>
