--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-	<link rel = "stylesheet" href = "navigation_bar.css">
-	<link rel = "stylesheet" href = "bgimg.css">
-	<link rel = "stylesheet" href = "logo.css">
-	<link rel = "stylesheet" href = "form_login.css">
-	<link rel = "stylesheet" href = "side_menu.css">
-	<link rel = "stylesheet" href = "cont.css">
+	<link rel = "stylesheet" href = "../css/navigation_bar.css">
+	<link rel = "stylesheet" href = "../css/bgimg.css">
+	<link rel = "stylesheet" href = "../css/logo.css">
+	<link rel = "stylesheet" href = "../css/form_login.css">
+	<link rel = "stylesheet" href = "../css/side_menu.css">
 	<style type = "text/css">
 		a {text-decoration: none}
 
@@ -28,16 +27,16 @@
 	</style>
 </head>
 <body>
-	<form method = "get" action = "raw01.html">
+	<form method = "get" action = "../raw01.html">
 		<button type = "submit">Home</button>
 	</form>
 	<div id = "logo"> Easy search job</div>
 
 	<div id = "nav">
 		<a href="about_us.html">About Us</a>
-		<a href="resume.php">View Resume</a>
+		<a href="../PHP/resume.php">View Resume</a>
 		<a href="">View Job Listing</a>
-		<a href="">Submit Your Resume</a>
+		<a href="contact.html">Submit Your Resume</a>
 		<a href="">Submit a job ad</a>
 		<a href="contact.html">Contacts</a>
 	</div>
