--- a/pages/submit_resume.html
+++ b/pages/submit_resume.html
@@ -113,8 +113,8 @@ hr {
 
 
 <div class="modal">
-    <span onclick = "location = 'raw01.html'" class = "close" title = "Close Modal">&times;</span>
-    <form class = "modal-content" method = "POST" action = "submit_resume.php">
+    <span onclick = "location = '../raw01.html'" class = "close" title = "Close Modal">&times;</span>
+    <form class = "modal-content" method = "POST" action = "../PHP/submit_resume.php">
     <div class = "container">
         <h2>Resume</h2> &nbsp; &nbsp; &nbsp; &nbsp;
         <p>Please fill in this form to create you resume.</p>
