--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -47,9 +47,8 @@
 		<div id = "nav">
 			<a href="about_us.html">About Us</a>
 			<a href="../PHP/resume.php">View Resume</a>
-			<a href="">View Job Listing</a>
+			<a href="../PHP/job_offer.php">View Job Listing</a>
 			<a href="submit_resume.html">Submit Your Resume</a>
-			<a href="">Submit a job ad</a>
 			<a href="contact.html">Contacts</a>
 		</div>
 		<div id = "about_us">
