--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,9 +35,8 @@
 	<div id = "nav">
 		<a href="about_us.html">About Us</a>
 		<a href="../PHP/resume.php">View Resume</a>
-		<a href="">View Job Listing</a>
-		<a href="contact.html">Submit Your Resume</a>
-		<a href="">Submit a job ad</a>
+		<a href="job_offer.php">View Job Listing</a>
+		<a href="submit_resume.html">Submit Your Resume</a>
 		<a href="contact.html">Contacts</a>
 	</div>
 	<br>
