--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,120 +1,177 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box}
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
-
-/* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
-
-/* Set a style for all buttons */
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-}
-
-button:hover {
-    opacity:1;
-}
-
-/* Extra styles for the cancel button */
-/*.cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-}*/
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 100%;
-}
-
-/* Add padding to container elements */
-.container {
-    padding: 16px;
-}
-
-/* The Modal (background) */
-.modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #474e5d;
-    padding-top: 50px;
-}
-
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* Style the horizontal ruler */
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-}
-
-/* The Close Button (x) */
-.close {
-    position: absolute;
-    right: 35px;
-    top: 15px;
-    font-size: 40px;
-    font-weight: bold;
-    color: #f1f1f1;
-}
-
-.close:hover,
-.close:focus {
-    color: #f44336;
-    cursor: pointer;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-     .cancelbtn, .signupbtn {
-       width: 100%;
+<head>
+    <script type = "text/javascript">
+    function validate()
+    {
+        var pass = /^[a-z0-10]+$/;
+        x = document.myForm;
+        if(x.fname.value == "")
+        {
+            alert("Please Provide Your First Name");
+            x.fname.focus();
+            return false;
+        }
+        if(x.lname.value == "")
+        {
+            alert("Please Provide Your Last Name");
+            x.Nlname.focus();
+            return false;
+        }
+        if(x.psw.value == "" || x.psw.value.match(pass))
+        {
+            alert("Please Provide Your Password");
+            x.psw.focus();
+            return false;
+        }
+        if(x.email.value == "")
+        {
+            alert("Please Provide Your Email ID");
+            x.Email.focus();
+            return false;
+        }
+        if(x.country.value == "")
+        {
+            alert("Please Provide Your Country Name");
+            return false;
+        }
+        if(x.mobno.value == "")
+        {
+            alert("Please Provide Your Mobile No");
+            return false;
+        }
+        return true;
     }
-}
-</style>
+    function validateEmail()
+    {
+        var emailID = document.myForm.email.value;
+        atpos = emailID.indexOf("@");
+        dotpos = emailID.lastIndexOf(".");
+        if(atpos < 1 || (dotpos - atpos < 2))
+        {
+            alert("Please Enter Correct Email ID");
+            document.myForm.email.focus();
+            return false;
+        }
+        return true;
+    }
+    </script>
+    <style>
+    body {font-family: Arial, Helvetica, sans-serif;}
+    * {box-sizing: border-box}
+    /* Full-width input fields */
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: none;
+        background: #f1f1f1;
+    }
+
+    /* Add a background color when the inputs get focus */
+    input[type=text]:focus, input[type=password]:focus {
+        background-color: #ddd;
+        outline: none;
+    }
+
+    /* Set a style for all buttons */
+    button {
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        opacity: 0.9;
+    }
+
+    button:hover {
+        opacity:1;
+    }
+
+    /* Extra styles for the cancel button */
+    /*.cancelbtn {
+        padding: 14px 20px;
+        background-color: #f44336;
+    }*/
+
+    /* Float cancel and signup buttons and add an equal width */
+    .cancelbtn, .signupbtn {
+      float: left;
+      width: 100%;
+    }
+
+    /* Add padding to container elements */
+    .container {
+        padding: 16px;
+    }
+
+    /* The Modal (background) */
+    .modal {
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: #474e5d;
+        padding-top: 50px;
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+        border: 1px solid #888;
+        width: 80%; /* Could be more or less, depending on screen size */
+    }
+
+    /* Style the horizontal ruler */
+    hr {
+        border: 1px solid #f1f1f1;
+        margin-bottom: 25px;
+    }
+
+    /* The Close Button (x) */
+    .close {
+        position: absolute;
+        right: 35px;
+        top: 15px;
+        font-size: 40px;
+        font-weight: bold;
+        color: #f1f1f1;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #f44336;
+        cursor: pointer;
+    }
+
+    /* Clear floats */
+    .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+    /* Change styles for cancel button and signup button on extra small screens */
+    @media screen and (max-width: 300px) {
+         .cancelbtn, .signupbtn {
+           width: 100%;
+        }
+    }
+    </style>
+</head>
 <body>
 
 
 <div class="modal">
     <span onclick = "location = '../raw01.html'" class = "close" title = "Close Modal">&times;</span>
-    <form class = "modal-content" method = "POST" action = "../PHP/sign_up.php">
+    <form name = "myForm" class = "modal-content" method = "POST" action = "../PHP/sign_up.php" onsubmit = "return(validate());">
     <div class = "container">
         <h2>Sign Up</h2> &nbsp; &nbsp; &nbsp; &nbsp;
         <p>Please fill in this form to create an account.</p>
