--- a/raw01.html
+++ b/raw01.html
@@ -40,10 +40,10 @@
 		<br>
 		<div id = "img">
 			<br>
-			<div style = "color: #006666; font-family: Arial, sans-serif; font-size: 70px">
+			<div style = "color: #006666; font-family: Arial, sans-serif; font-size: 70px; margin-left:10px;">
 				Find the right <br>JOB for YOU
 			</div><br>
-			<div style = "color: #cc0066; font-family: Verdana, sans-serif; font-size: 25px;">
+			<div style = "color: #cc0066; font-family: Italic; font-size: 25px;margin-left:10px;">
 				Choose a job you LOVE, and you will NEVER <br>have to WORK a DAY in your LIFE !
 			</div>
 		</div>
@@ -114,21 +114,21 @@
 		<div id = "vertical_menu">
 
 			<div class="mySlides fade">
-			  <img src="pic/1.jpg" width="85%" height="40%">
+			  <a href = "https://bastech.com"><img src="pic/1.jpg" width="85%" height="40%"></a>
 			</div>
 
 			<div class="mySlides fade">
-			  <img src="pic/2.jpg" width="85%" height="40%">
+			 <a href = "http://ibm.com"><img src="pic/2.jpg" width="85%" height="40%"></a>
 			</div>
 
 			<div class="mySlides fade">
-			  <img src="pic/3.jpg" width="85%" height="40%">
+			  <a href = "http://flexnet.com"><img src="pic/3.jpg" width="85%" height="40%"></a>
 			</div>
 			<div class="mySlides fade">
-			  <img src="pic/5.png" width="85%" height="40%">
+			  <a href = "http://dell.com"><img src="pic/4.jpg" width="85%" height="40%"></a>
 			</div>
 			<div class="mySlides fade">
-			  <img src="pic/6.jpg" width="85%" height="40%">
+			  <a href = "http://tecknologics.com"><img src="pic/6.jpg" width="85%" height="40%"></a>
 			</div>
 
 		</div>
